--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@angular/compiler": "^19.2.13",
     "@angular/core": "^19.2.13",
     "@angular/forms": "^19.2.13",
+    "@angular/material": "^20.0.1",
     "@angular/platform-browser": "^19.2.13",
     "@angular/platform-browser-dynamic": "^19.2.13",
     "@angular/router": "^19.2.13",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/vite": "^4.1.8",
+    "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
   },
